# ccrutchf.github.io

./: .gitignore  _config.yml  aboutme.md  generate_publications.py  index.html  publications.bib  pyproject.toml
.github/workflows/: ci.yml
_posts/: 2022-05-27-baboons-on-the-move-at-measuring-behavior-2022.md  2023-06-20-introducing_next_generation_of_fishsense.md  2023-06-20-test-post.md  2023-09-08-test-post.md  2024-01-05-virtual_machines_on_android_14_using_KVM.md  2024-03-15-continued_virtual_machines_on_android_14.md
